...
import '../../static_methods.dart';
import 'components/hosting_resort_type_item.dart';
import '02_resort_description_screen.dart';

class ResortTypeScreen extends StatefulWidget {
  final User user;
  final Key key = Key('resort_type_screen_key');

  ResortTypeScreen(this.user);

  @override
  _ResortTypeScreenState createState() => _ResortTypeScreenState();
}
...
            ),
            Padding(
              key: Key('padding in resort type screen'),
              padding: EdgeInsets.only(
                  left: size.width * 0.05, right: size.width * 0.05),
              child: Text(
                'What area is your residence located in?',
                style: kHeaderTextStyle.copyWith(
                  fontWeight: FontWeight.w400,
                  fontSize: (size.height > size.width)
                      ? size.width * 0.042
                      : size.height * 0.048,
                ),
...
