...
import '../../models/resort_identification.dart';
import 'components/facilitate_item.dart';

class ResortIdentificationScreen extends StatefulWidget {
  final String villa;
  final User user;
  final Key key = Key('resort_identification_screen_key');
  final ResortDescription resortDescription;

  ResortIdentificationScreen({this.villa, this.resortDescription, this.user});

  @override
  _ResortIdentificationScreenState createState() =>
...
            ),
            BottomContainer(
              text: 'Submit & Continue',
              onPressed: () {
                onPressed();
              },
              key: Key('submit_identification'),
            ),
          ],
        ),
      ),
    );
  }
...
